Added error reporting and webpage timestamp reporting
